fix wrap height for SharedFiles

--- a/src/Pages/PrivateCabinet/Components/WorkElements/WorkBarsPreview/WorkBarsPreview.module.sass
+++ b/src/Pages/PrivateCabinet/Components/WorkElements/WorkBarsPreview/WorkBarsPreview.module.sass
@@ -8,7 +8,7 @@
     align-items: center
     width: 100%
     height: 62%
-    min-height: 33vh
+    min-height: 30vh
     overflow: hidden
     .noSearchResults
       font-size: 14px
